--- a/core/site.common/WebContent/resources/common-css/base.css
+++ b/core/site.common/WebContent/resources/common-css/base.css
@@ -3,36 +3,39 @@
 html {overflow:-moz-scrollbars-vertical;}
 html {scroll-behavior:smooth;-webkit-text-size-adjust:none;text-rendering:optimizeLegibility;}
 html, body {width:100%;height:100%;margin:0;padding:0;background:transparent;}
-::-moz-selection {text-shadow:none;color:#fff;background-color:salmon;}
-::selection {text-shadow:none;color:#fff;background-color:salmon;}
+::-moz-selection {text-shadow:none;color:#fff;background:salmon;}
+::selection {text-shadow:none;color:#fff;background:salmon;}
 
-div, dl, dt, dd, blockquote, iframe, figcaption, figure, form, caption, fieldset, legend, input, select, textarea, 
-h1, h2, h3, h4, h5, h6, table, th, td, p, pre, ol, ul, li {margin:0;padding:0;}
+div, dl, dt, dd, blockquote, iframe, figcaption, figure, form, caption, fieldset, legend,  
+h1, h2, h3, h4, h5, h6, table, th, td, p, pre, ol, ul, li {width:100%;margin:0;padding:0;}
 
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary, template 
 {display:block;width:100%;margin:0;padding:0;}
 audio, canvas, video {display:inline-block;*display:inline;*zoom:1;margin:0;padding:0;}
 audio:not([controls]) {display:none;}
 
-body, h1, h2, h3, h4, h5, h6, input, select, button, textarea, a {font-size:100%;font-family:'맑은 고딕', '나눔고딕', NanumGothic, '돋움', Dotum, sans-serif;line-height:1.3;color:#333;background:transparent;}
+body, h1, h2, h3, h4, h5, h6, input, select, button, textarea, a {font-size:100%;font-family:'맑은 고딕', 
+'나눔고딕', NanumGothic, '돋움', Dotum, sans-serif;line-height:1.3;color:#333;background:transparent;}
+
 address {font-style:normal;}
 i {font-style:normal;}
 
 ol, ul, li {list-style:none;}
 
-table {width:100%;table-layout:fixed;border-collapse:collapse;border-spacing:0;border:0 none;empty-cells:show;}
+table {table-layout:fixed;border-collapse:collapse;border-spacing:0;border:0 none;empty-cells:show;}
 th, td {border:0 none;}
 
 iframe {width:100%;vertical-align:middle;}
 fieldset {vertical-align:middle;outline:0 none;border:0 none;}
 legend {width:100%;}
 
-select {border:1px solid #e5e5e5;background-color:#fff;}
+select {border:1px solid #e5e5e5;background:#fff;}
 
 ::-ms-clear {display:none;}
 
+input, select {margin:0;padding:0;}
 input[type=text],
-input[type=password] {border:1px solid #e5e5e5;outline:0 none;background-color:#fff;}
+input[type=password] {border:1px solid #e5e5e5;outline:0 none;background:#fff;}
 input[type=button],
 input[type=submit],
 button {outline:0 none;border:0 none;cursor:pointer;}
@@ -44,7 +47,7 @@ input:disabled,
 button:disabled,
 button[disabled] {cursor:auto;}
 
-textarea {display:inline-block;width:50%;border:1px solid #e5e5e5;background-color:#fff;resize:none;}
+textarea {display:inline-block;width:50%;margin:0;padding:0;border:1px solid #e5e5e5;background:#fff;resize:none;}
 
 a {text-decoration:none;}
 a:hover, a:active, a:focus {text-decoration:none;color:#999;}
