--- a/core/site.common/WebContent/resources/common-css/component/modal.css
+++ b/core/site.common/WebContent/resources/common-css/component/modal.css
@@ -35,7 +35,12 @@
 
 
 .common-modal-layout {position:fixed;top:15%;right:0;left:0;margin:0 auto;z-index:999999;}
-.common-modal-wrap {width:25%;height:50%;padding:25px;box-sizing:border-box;box-shadow:0 0 10px #666;background:#fff;}
+.common-modal-wrap {width:25%;padding:25px;box-sizing:border-box;box-shadow:0 0 10px #666;background:#fff;
+	overflow:hidden;}
 
-#btnCloseModal {position:absolute;top:25px;right:25px;color:#fff;background:#333;}
+.modal-title {font-size:110%;}
+.modal-title::after {display:block;margin-top:15px;margin-bottom:30px;content:'';border-bottom:thin solid #ccc;}
+
+#btnCloseModal {position:absolute;top:25px;right:25px;padding:3px 6px;font-size:80%;color:#fff;
+	border-radius:3px;background:#333;}
 #btnCloseModal:hover {opacity:.5;}
