--- a/core/site.common/WebContent/resources/common-css/component/dialog.css
+++ b/core/site.common/WebContent/resources/common-css/component/dialog.css
@@ -1,21 +1,33 @@
 @charset "utf-8";
 
 /***** 다이어로그 *****/
-dialog {display:block;position:absolute;left:0;right:0;background:#fff;}
-
 dialog:not([open]) {display:none;}
 
-dialog::backdrop,
-dialog::backdrop p,
-dialog + .backdrop {position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);}
+dialog[open] {display:block;position:absolute;left:0;right:0;background:#fff;}
+
+dialog[open]::backdrop,
+dialog + .backdrop {position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);
+	-webkit-animation:fadeInModal 0.5s;
+	animation:fadeInModal 0.5s;
+}
 
 ._dialog_overlay {position:fixed;top:0;left:0;width:100%;height:100%;background:#333;opacity:.5;}
 
 dialog.fixed {position:fixed;top:50%;transform:translate(0, -50%);}
 
+@-webkit-keyframes fadeInDialog {
+	from {opacity:0;}
+	  to {opacity:1;}
+}
+
+@keyframes fadeInDialog {
+	from {opacity:0;}
+	  to {opacity:1;}
+}
 
 
-.common-dialog {top:25%;width:25%;padding:25px;border:0 none;box-sizing:border-box;box-shadow:0 0 10px #666;}
+
+.common-dialog {top:20%;width:25%;padding:25px;border:0 none;box-sizing:border-box;box-shadow:0 0 10px #666;}
 
 .dialog-title {font-size:110%;}
 .dialog-title::after {display:block;margin-top:15px;margin-bottom:30px;content:'';border-bottom:thin solid #ccc;}
